--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
     "vue-loader": "^17.0.1",
     "vue-template-compiler": "^2.7.13"
   },
