--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel": "^5.8.23",
+    "babel-core": "^5.0.0",
+    "babel-loader": "^5.3.2",
     "core-js": "^3.8.3",
     "node-sass": "^7.0.3",
     "sass-loader": "^13.1.0",
     "vue": "^3.2.13",
-    "vue-route": "^1.5.1"
+    "vue-route": "^1.5.1",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
